# chip8

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt
src/: chip8.c  chip8.h  chip8_config.h.in  chip8_instructions.c  chip8_instructions.h  chip8_numbers.h  chip8_time.c  chip8_time.h  every.c  every.h  framebuffer.c  framebuffer.h  gfx.c  gfx.h  gfx.opengl.inc.c  gfx.raylib.inc.c  main.c  param_annotations.h  window_ctx.c  window_ctx.glfw.c  window_ctx.h  window_ctx.raylib.c
